--- a/Game.html
+++ b/Game.html
@@ -54,7 +54,7 @@
   <!-- Code Video -->
   <div class="media">
     <video id="ShopVideo" controls>
-      <source src="Photo & Audio/ShopVideo.mp4" type="video/mp4">
+      <source src="Photo & Audio/BadGame.mp4" type="video/mp4">
     </video>
     <ul>
       <li>I am using edited photos that I have put together, of roads and wilderness backgrounds as well as images of cars and other objects from the internet, to set the stage for the game.</li>
@@ -65,7 +65,7 @@
   <!-- Game Video -->
   <div class="media">
     <video id="LoginVideo" controls>
-      <source src="Photo & Audio/LoginVideo.mp4" type="video/mp4">
+      <source src="Photo & Audio/BadGame.mp4" type="video/mp4">
     </video>
     <ul>
       <li>BP</li>
