--- a/Game.html
+++ b/Game.html
@@ -15,8 +15,8 @@
     }
 
     .media video {
-      width: 50%; /* Adjust video size */
-      height: auto;
+      width: 12.5%; /* Adjust video size */
+      height: 25;
       border: 2px solid #4b0082; /* Indigo border */
     }
 
