--- a/Game.html
+++ b/Game.html
@@ -58,7 +58,7 @@
     </video>
     <ul>
       <li>I originally planned to use edited photos I had compiled of roads and wilderness backgrounds, along with images of cars and other objects from the internet, to set the stage for the game.</li>
-      <li>When the edited videos didn’t sync well, I decided to try again with a new app. In this version, I coded rectangles to slide down the screen, creating a dashed centerline and two solid outer lines to form a road. I also added a car to drive on it.</li>
+      <li>When the edited photos didn’t work well, I decided to try again with a new app. In this version, I coded rectangles to slide down the screen, creating a dashed centerline and two solid outer lines to form a road. I also added a car to drive on it.</li>
       <li>Once the shapes were in place, I created a movement function for the car. It can now move side to side across the screen without crossing the solid outer lines. Additionally, the car rotates slightly when it moves left or right, adding a touch of realism. </li>
       <li>BP</li>
     </ul>
