--- a/Game.html
+++ b/Game.html
@@ -54,13 +54,30 @@
   <!-- Code Video -->
   <div class="media">
     <video id="SimpleGameVideo2" controls>
-      <source src="Photo & Audio/SimpleGameVideo2.mp4" type="video/mp4">
+      <source src="Photo & Audio/BadGame.mp4" type="video/mp4">
     </video>
     <ul>
       <li>In Week 1 I originally planned to use edited photos I had compiled of roads and wilderness backgrounds, along with images of cars and other objects from the internet, to set the stage for the game.</li>
+    </ul>
+  </div>
+
+  <div class="media">
+    <video id="SimpleGameVideo2" controls>
+      <source src="Photo & Audio/SimpleGameVideo2.mp4" type="video/mp4">
+    </video>
+    <ul>
       <li>As Week 2 started I noticed the edited photos didn’t work well, so I decided to try again with a new app. In this version, I coded rectangles to slide down the screen, creating a dashed centerline and two solid outer lines to form a road. I also added a car to drive on it.</li>
       <li>Later In Week 2 when the shapes were in place, I created a movement function for the car. It can now move side to side across the screen without crossing the solid outer lines. Additionally, the car rotates slightly when it moves left or right, adding a touch of realism. </li>
-      <li>BP</li>
+    </ul>
+  </div>
+
+  <div class="media">
+    <video id="SimpleGameVideo2" controls>
+      <source src="Photo & Audio/SimpleGameVideo2.mp4" type="video/mp4">
+    </video>
+    <ul>
+      <li>Week 3</li>
+      <li>Week 3</li>
     </ul>
   </div>
 
