--- a/Game.html
+++ b/Game.html
@@ -73,11 +73,11 @@
 
   <div class="media">
     <video id="SimpleGameVideo2" controls>
-      <source src="Photo & Audio/SimpleGameVideo2.mp4" type="video/mp4">
+      <source src="Photo & Audio/SGWeek3Video.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>Week 3</li>
-      <li>Week 3</li>
+      <li>Now that the car moves fluidly and even turns slightly with the movement, I added falling objects that get in the car's way. If you, as the player, drive the car into an object, the game ends, and your score stops counting.</li>
+      <li>I am still working on stopping the road entirely at the end of the game and making the score update smoothly, without flashing during or after the game.</li>
     </ul>
   </div>
 
