--- a/Game.html
+++ b/Game.html
@@ -81,6 +81,16 @@
     </ul>
   </div>
 
+  <div class="media">
+    <video id="FinalSimpleGameVideo" controls>
+      <source src="Photo & Audio/FinalSGVideo.mp4" type="video/mp4">
+    </video>
+    <ul>
+      <li>BP</li>
+      <li>BP</li>
+    </ul>
+  </div>
+
   <script>
     // Get all video elements on the page
     const videos = document.querySelectorAll('video');
