--- a/Game.html
+++ b/Game.html
@@ -86,8 +86,11 @@
       <source src="Photo & Audio/FinalSGVideo.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>BP</li>
-      <li>BP</li>
+      <li>In this final update to my game, I addressed all issues and implemented improvements based on previous feedback./li>
+      <li>I made the score counter smoother and less flashy during gameplay, ensuring it remains stable when displaying your final score at the end of the game.</li>
+      <li>The dashed line in the road now stops between rounds, and when you reset, the road resumes at its normal playing speed.</li>
+      <li>I added a "Try Again" button, allowing you to immediately start a new round without needing to exit the app.</li>
+      <li>Additionally, I made minor updates to car rotation, button colors, and obstacle movement to enhance the overall aesthetics of the game.</li>
     </ul>
   </div>
 
