--- a/Game.html
+++ b/Game.html
@@ -94,6 +94,15 @@
     </ul>
   </div>
 
+  <div class="media">
+    <video id="FinalSimpleGameCode" controls>
+      <source src="Photo & Audio/FinalSGCode.mp4" type="video/mp4">
+    </video>
+    <ul>
+      <li>Finally, Here is a video of my finished code./li>
+    </ul>
+  </div>
+
   <script>
     // Get all video elements on the page
     const videos = document.querySelectorAll('video');
