--- a/Game.html
+++ b/Game.html
@@ -16,7 +16,7 @@
 
     .media video {
       width: 12.5%; /* Adjust video size */
-      height: 25;
+      height: 250px; /* Set a consistent height for all videos */
       border: 2px solid #4b0082; /* Indigo border */
     }
 
