--- a/Game.html
+++ b/Game.html
@@ -94,6 +94,15 @@
   </div>
 
   <div class="media">
+    <video id="FinalAppVideo" controls>
+      <source src="Photo & Audio/FinalAppVideo.mp4" type="video/mp4">
+    </video>
+    <ul>
+      <li>For a more in-depth explanation of my app and how it works, check out the video I created and submitted to the 2025 Steam Showcase. I made it to share my creation with others and for a chance to win something.</li>
+    </ul>
+  </div>
+
+  <div class="media">
     <video id="FinalSimpleGameCode" controls>
       <source src="Photo & Audio/FinalSGCode.mp4" type="video/mp4">
     </video>
